--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -3314,7 +3314,7 @@ QPushButton:pressed {
                        <double>100.000000000000000</double>
                       </property>
                       <property name="tracking">
-                       <bool>false</bool>
+                       <bool>true</bool>
                       </property>
                       <property name="orientation">
                        <enum>Qt::Horizontal</enum>
