--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>413</width>
+    <width>494</width>
     <height>830</height>
    </rect>
   </property>
@@ -1985,8 +1985,8 @@ QPushButton:pressed {
        <rect>
         <x>0</x>
         <y>-22</y>
-        <width>400</width>
-        <height>732</height>
+        <width>481</width>
+        <height>755</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -2206,6 +2206,9 @@ QPushButton:pressed {
                   <property name="buttonSymbols">
                    <enum>QAbstractSpinBox::NoButtons</enum>
                   </property>
+                  <property name="value">
+                   <double>0.030000000000000</double>
+                  </property>
                  </widget>
                 </item>
                 <item>
@@ -2247,6 +2250,39 @@ QPushButton:pressed {
                   </property>
                   <property name="text">
                    <string>2</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="buttonVolumeRenderThreshold">
+                  <property name="styleSheet">
+                   <string notr="true">QPushButton {
+	background-color: rgb(0, 0, 128);
+	color: rgb(225, 225, 225);
+	font-size: 16pt;
+	border: 2px solid rgb(128, 128, 128);
+	max-width: 180px;
+	max-height: 50px;
+	min-width: 100px;
+	min-height: 50px;
+	border-radius: 25px;
+    border-style: outset;
+}
+
+QPushButton:checked {
+	border-style: inset;
+	color: rgb(200, 200, 200);
+	background-color: rgb(0, 0, 100);
+}
+
+
+</string>
+                  </property>
+                  <property name="text">
+                   <string>Volume Render</string>
+                  </property>
+                  <property name="checkable">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
@@ -2864,9 +2900,9 @@ QPushButton:pressed {
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>-14</y>
-               <width>369</width>
-               <height>355</height>
+               <y>0</y>
+               <width>463</width>
+               <height>341</height>
               </rect>
              </property>
              <attribute name="label">
@@ -3050,8 +3086,20 @@ QPushButton:pressed {
                       <layout class="QVBoxLayout" name="verticalLayout_7">
                        <item>
                         <widget class="QLabel" name="labelSliderLeft">
+                         <property name="minimumSize">
+                          <size>
+                           <width>35</width>
+                           <height>0</height>
+                          </size>
+                         </property>
+                         <property name="maximumSize">
+                          <size>
+                           <width>35</width>
+                           <height>16777215</height>
+                          </size>
+                         </property>
                          <property name="text">
-                          <string>0</string>
+                          <string>0.00</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -3067,8 +3115,20 @@ QPushButton:pressed {
                        </item>
                        <item>
                         <widget class="QLabel" name="labelSliderLeftLimit">
+                         <property name="minimumSize">
+                          <size>
+                           <width>35</width>
+                           <height>0</height>
+                          </size>
+                         </property>
+                         <property name="maximumSize">
+                          <size>
+                           <width>35</width>
+                           <height>16777215</height>
+                          </size>
+                         </property>
                          <property name="text">
-                          <string>0</string>
+                          <string>0.00</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -3124,8 +3184,20 @@ QPushButton:pressed {
                       <layout class="QVBoxLayout" name="verticalLayout_30">
                        <item>
                         <widget class="QLabel" name="labelSliderRight">
+                         <property name="minimumSize">
+                          <size>
+                           <width>35</width>
+                           <height>0</height>
+                          </size>
+                         </property>
+                         <property name="maximumSize">
+                          <size>
+                           <width>35</width>
+                           <height>16777215</height>
+                          </size>
+                         </property>
                          <property name="text">
-                          <string>0</string>
+                          <string>0.00</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -3141,8 +3213,20 @@ QPushButton:pressed {
                        </item>
                        <item>
                         <widget class="QLabel" name="labelSliderRightLimit">
+                         <property name="minimumSize">
+                          <size>
+                           <width>35</width>
+                           <height>0</height>
+                          </size>
+                         </property>
+                         <property name="maximumSize">
+                          <size>
+                           <width>35</width>
+                           <height>16777215</height>
+                          </size>
+                         </property>
                          <property name="text">
-                          <string>0</string>
+                          <string>1.00</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -3308,7 +3392,7 @@ QPushButton:pressed {
                     <item>
                      <widget class="ctkDoubleSlider" name="sliderTopXPercent">
                       <property name="singleStep">
-                       <double>1.000000000000000</double>
+                       <double>0.500000000000000</double>
                       </property>
                       <property name="maximum">
                        <double>100.000000000000000</double>
@@ -3345,7 +3429,7 @@ QPushButton:pressed {
                        <double>100.000000000000000</double>
                       </property>
                       <property name="singleStep">
-                       <double>1.000000000000000</double>
+                       <double>0.500000000000000</double>
                       </property>
                      </widget>
                     </item>
@@ -3387,40 +3471,7 @@ QPushButton:pressed {
 </string>
                       </property>
                       <property name="text">
-                       <string>Overlay</string>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="QPushButton" name="buttonVolumeRenderThreshold">
-                      <property name="styleSheet">
-                       <string notr="true">QPushButton {
-	background-color: rgb(0, 0, 128);
-	color: rgb(225, 225, 225);
-	font-size: 16pt;
-	border: 2px solid rgb(128, 128, 128);
-	max-width: 180px;
-	max-height: 50px;
-	min-width: 100px;
-	min-height: 50px;
-	border-radius: 25px;
-    border-style: outset;
-}
-
-QPushButton:pressed {
-	border-style: inset;
-	color: rgb(200, 200, 200);
-	background-color: rgb(0, 0, 100);
-}
-
-
-</string>
-                      </property>
-                      <property name="text">
-                       <string>Volume Render</string>
-                      </property>
-                      <property name="checkable">
-                       <bool>true</bool>
+                       <string>Visualize</string>
                       </property>
                      </widget>
                     </item>
