--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>494</width>
-    <height>830</height>
+    <height>700</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -60,8 +60,8 @@ font-weight: bold;</string>
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>413</width>
-        <height>710</height>
+        <width>494</width>
+        <height>580</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -252,8 +252,8 @@ font-weight: normal;</string>
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>382</width>
-               <height>618</height>
+               <width>463</width>
+               <height>603</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1559,8 +1559,8 @@ QPushButton:pressed {
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>413</width>
-        <height>710</height>
+        <width>494</width>
+        <height>580</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -1621,8 +1621,8 @@ font-weight: normal;</string>
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>395</width>
-               <height>563</height>
+               <width>476</width>
+               <height>448</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1984,7 +1984,7 @@ QPushButton:pressed {
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-22</y>
+        <y>-175</y>
         <width>481</width>
         <height>755</height>
        </rect>
@@ -2943,29 +2943,6 @@ QPushButton:pressed {
                   <widget class="QWidget" name="widget_12" native="true">
                    <layout class="QHBoxLayout" name="horizontalLayout_16">
                     <item>
-                     <widget class="QPushButton" name="pushButtonEnableThreshold">
-                      <property name="maximumSize">
-                       <size>
-                        <width>80</width>
-                        <height>16777215</height>
-                       </size>
-                      </property>
-                      <property name="text">
-                       <string>Enable</string>
-                      </property>
-                      <property name="checkable">
-                       <bool>true</bool>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
-                     <widget class="Line" name="line_9">
-                      <property name="orientation">
-                       <enum>Qt::Vertical</enum>
-                      </property>
-                     </widget>
-                    </item>
-                    <item>
                      <widget class="QCheckBox" name="checkBoxIgnoreZeros">
                       <property name="text">
                        <string>Ignore Zeros</string>
@@ -2987,6 +2964,25 @@ QPushButton:pressed {
                        </size>
                       </property>
                      </spacer>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="pushButtonEnableThresholdAutoUpdate">
+                      <property name="maximumSize">
+                       <size>
+                        <width>110</width>
+                        <height>16777215</height>
+                       </size>
+                      </property>
+                      <property name="text">
+                       <string>auto-update</string>
+                      </property>
+                      <property name="checkable">
+                       <bool>true</bool>
+                      </property>
+                      <property name="checked">
+                       <bool>true</bool>
+                      </property>
+                     </widget>
                     </item>
                    </layout>
                   </widget>
@@ -3446,22 +3442,71 @@ QPushButton:pressed {
                      <number>0</number>
                     </property>
                     <item>
-                     <widget class="QPushButton" name="buttonOverlayThreshold">
+                     <spacer name="horizontalSpacer_16">
+                      <property name="orientation">
+                       <enum>Qt::Horizontal</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>40</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                     </spacer>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="thresholdingEnabledIndicator1">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">QPushButton {
+	background-color: rgb(200, 200, 200);
+	border: 2px solid rgb(128, 128, 128);
+	max-width: 8px;
+	max-height: 8px;
+	min-width: 8px;
+	min-height: 8px;
+	border-radius: 4px;
+    border-style: outset;
+}
+
+QPushButton:checked {
+	border-style: inset;
+	background-color: rgb(255, 0, 0);
+}
+
+
+</string>
+                      </property>
+                      <property name="text">
+                       <string/>
+                      </property>
+                      <property name="checkable">
+                       <bool>true</bool>
+                      </property>
+                      <property name="checked">
+                       <bool>false</bool>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="pushButtonEnableThreshold">
                       <property name="styleSheet">
                        <string notr="true">QPushButton {
 	background-color: rgb(0, 128, 0);
 	color: rgb(225, 225, 225);
 	font-size: 20pt;
 	border: 2px solid rgb(128, 128, 128);
-	max-width: 140px;
+	max-width: 150px;
 	max-height: 50px;
-	min-width: 100px;
+	min-width: 150px;
 	min-height: 50px;
 	border-radius: 25px;
     border-style: outset;
 }
 
-QPushButton:pressed {
+QPushButton:checked {
 	border-style: inset;
 	color: rgb(200, 200, 200);
 	background-color: rgb(0, 100, 0);
@@ -3473,7 +3518,62 @@ QPushButton:pressed {
                       <property name="text">
                        <string>Visualize</string>
                       </property>
+                      <property name="checkable">
+                       <bool>true</bool>
+                      </property>
+                      <property name="checked">
+                       <bool>false</bool>
+                      </property>
                      </widget>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="thresholdingEnabledIndicator2">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">QPushButton {
+	background-color: rgb(200, 200, 200);
+	border: 2px solid rgb(128, 128, 128);
+	max-width: 8px;
+	max-height: 8px;
+	min-width: 8px;
+	min-height: 8px;
+	border-radius: 4px;
+    border-style: outset;
+}
+
+QPushButton:checked {
+	border-style: inset;
+	background-color: rgb(255, 0, 0);
+}
+
+
+</string>
+                      </property>
+                      <property name="text">
+                       <string/>
+                      </property>
+                      <property name="checkable">
+                       <bool>true</bool>
+                      </property>
+                      <property name="checked">
+                       <bool>false</bool>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <spacer name="horizontalSpacer_15">
+                      <property name="orientation">
+                       <enum>Qt::Horizontal</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                       <size>
+                        <width>40</width>
+                        <height>20</height>
+                       </size>
+                      </property>
+                     </spacer>
                     </item>
                    </layout>
                   </widget>
@@ -3501,14 +3601,17 @@ QPushButton:pressed {
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>380</width>
-               <height>320</height>
+               <width>375</width>
+               <height>305</height>
               </rect>
              </property>
              <attribute name="label">
               <string> - Uncertainty Sphere</string>
              </attribute>
              <layout class="QVBoxLayout" name="verticalLayout_10">
+              <property name="margin">
+               <number>0</number>
+              </property>
               <item>
                <widget class="QWidget" name="widget_2" native="true">
                 <layout class="QVBoxLayout" name="verticalLayout_17">
@@ -3522,7 +3625,7 @@ QPushButton:pressed {
                      <family>Quicksand</family>
                      <pointsize>9</pointsize>
                      <weight>50</weight>
-                     <italic>true</italic>
+                     <italic>false</italic>
                      <bold>false</bold>
                     </font>
                    </property>
@@ -3618,7 +3721,7 @@ QPushButton:pressed {
                      </widget>
                     </item>
                     <item>
-                     <widget class="QCheckBox" name="checkBoxLocked">
+                     <widget class="QToolButton" name="buttonLocked">
                       <property name="maximumSize">
                        <size>
                         <width>60</width>
@@ -3627,6 +3730,17 @@ QPushButton:pressed {
                       </property>
                       <property name="text">
                        <string>Lock</string>
+                      </property>
+                      <property name="icon">
+                       <iconset theme="chain">
+                        <normaloff/>
+                       </iconset>
+                      </property>
+                      <property name="checkable">
+                       <bool>true</bool>
+                      </property>
+                      <property name="checked">
+                       <bool>true</bool>
                       </property>
                      </widget>
                     </item>
@@ -3769,14 +3883,17 @@ QPushButton:pressed {
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>358</width>
-               <height>392</height>
+               <width>340</width>
+               <height>374</height>
               </rect>
              </property>
              <attribute name="label">
               <string> - Uncertainty Surface</string>
              </attribute>
              <layout class="QVBoxLayout" name="verticalLayout_18">
+              <property name="margin">
+               <number>0</number>
+              </property>
               <item>
                <widget class="QWidget" name="widget_4" native="true">
                 <layout class="QVBoxLayout" name="verticalLayout_19">
@@ -3790,7 +3907,7 @@ QPushButton:pressed {
                      <family>Quicksand</family>
                      <pointsize>9</pointsize>
                      <weight>50</weight>
-                     <italic>true</italic>
+                     <italic>false</italic>
                      <bold>false</bold>
                     </font>
                    </property>
