--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -60,8 +60,8 @@ font-weight: bold;</string>
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>101</width>
-        <height>727</height>
+        <width>494</width>
+        <height>580</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -252,8 +252,8 @@ font-weight: normal;</string>
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>340</width>
-               <height>618</height>
+               <width>463</width>
+               <height>603</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1559,8 +1559,8 @@ QPushButton:pressed {
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>107</width>
-        <height>506</height>
+        <width>494</width>
+        <height>580</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -1874,8 +1874,8 @@ color: rgb(0, 150, 0);</string>
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>280</width>
-               <height>184</height>
+               <width>476</width>
+               <height>448</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1984,7 +1984,7 @@ QPushButton:pressed {
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1451</y>
+        <y>-1292</y>
         <width>481</width>
         <height>2151</height>
        </rect>
@@ -4126,7 +4126,7 @@ QPushButton:checked {
               </widget>
              </item>
              <item>
-              <layout class="QGridLayout" name="gridLayout_6">
+              <layout class="QGridLayout" name="gridVisualizeSurface">
                <item row="0" column="0">
                 <widget class="QGroupBox" name="groupBox_9">
                  <property name="title">
@@ -4273,6 +4273,13 @@ QPushButton:checked {
                  </property>
                  <property name="checked">
                   <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="1">
+                <widget class="QCheckBox" name="checkBoxSurfaceAlign">
+                 <property name="text">
+                  <string>Align to Uncertainty</string>
                  </property>
                 </widget>
                </item>
